# setlistfm-playlist-sync

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/: copilot-instructions.md
src/setlistfm_playlist_sync/: __init__.py  __main__.py  cli.py  setlist_api.py  utils.py  ytmusic_api.py
tests/: conftest.py  test_cli.py  test_setlist_api.py  test_utils.py  test_ytmusic_api.py
